# ug2tools

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md
common/: crc.cpp  crc.hpp  dds_header.hpp  pre_header.hpp  read_word.cpp  read_word.hpp  subfile_header.hpp  tex_header.hpp  write_word.cpp
dds2tex/: CMakeLists.txt  dds2tex.cpp
libug2/: CMakeLists.txt  crc.cpp  read_word.cpp  write_word.cpp  write_word.hpp
pack/: CMakeLists.txt  pack.cpp
pre-pack/: CMakeLists.txt  pre-pack.cpp
pre-unpack/: CMakeLists.txt  pre-unpack.cpp
tex2dds/: CMakeLists.txt  tex2dds.cpp
unpack/: CMakeLists.txt  buffers.cpp  inflate_file.cpp  main.cpp  path_get_file_name.cpp  path_to_string.cpp  read_pre.cpp  unpack.cpp  unpack.hpp  write_files.cpp  write_spec.cpp
